--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9360,7 +9360,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200130124149440" list="Home" modified="20200130150957077" title="$:/StoryList">
+<div created="20200130124149440" list="[[Books / livres]] Home" modified="20200130152926544" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9420,8 +9420,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200130150828706" title="$:/temp/search">
-<pre>todo</pre>
+<div created="20190114084246125" modified="20200130152924893" title="$:/temp/search">
+<pre>livre</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9656,8 +9656,10 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * Jean-Samuel Pallard
 </pre>
 </div>
-<div created="20190131165226977" modified="20200113144953764" tags="epub download" title="Books / livres">
-<pre>! Frak Lepage
+<div created="20190131165226977" modified="20200130153145384" tags="epub download" title="Books / livres">
+<pre>! Delphine Batho
+* The Overstory / L'Arbre-Monde - Richard Powers
+! Frank Lepage
 * Keith Dixon - les évangélistes du marché 
 ! Lilian AUSY - cyberpunk
 * Greg Egan - Le Crystal
@@ -12221,8 +12223,14 @@ linkedin =&gt; 1/20
 
 * https://perso.limsi.fr/pointal/python:accueil</pre>
 </div>
-<div created="20190529145620246" modified="20200130144902092" tags="quotes" title="Quotes, citations">
+<div created="20190529145620246" modified="20200130152744043" tags="quotes" title="Quotes, citations">
 <pre>
+
+&lt;&lt;&lt;
+La raison même du politique c'est de s'organiser collectivement pour changer le cours de l'histoire - Delphine Batho
+&lt;&lt;&lt;
+
+
 &lt;&lt;&lt;
 * Être Un avec ce qui Est
 * Ne relève pas du faire
