--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -233,6 +233,8 @@ Error message and password prompt
 
 <li>coin magic</li>
 
+<li>Comment parler pour être entendus</li>
+
 <li>comment survivre à un mouvement de foule</li>
 
 <li>conférence Hip Hop</li>
@@ -362,6 +364,8 @@ Error message and password prompt
 <li>Philogynes BIG5</li>
 
 <li>PigCake recommandations</li>
+
+<li>pupilles / trous noirs</li>
 
 <li>pw</li>
 
@@ -9360,7 +9364,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200130124149440" list="[[Books / livres]] Home" modified="20200130152926544" title="$:/StoryList">
+<div created="20200131130630500" list="[[Quotes, citations]] Home" modified="20200131153437344" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9420,8 +9424,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200130152924893" title="$:/temp/search">
-<pre>livre</pre>
+<div created="20190114084246125" modified="20200131153436140" title="$:/temp/search">
+<pre>quotes</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9656,8 +9660,10 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * Jean-Samuel Pallard
 </pre>
 </div>
-<div created="20190131165226977" modified="20200130153145384" tags="epub download" title="Books / livres">
-<pre>! Delphine Batho
+<div created="20190131165226977" modified="20200131151820164" tags="epub download" title="Books / livres">
+<pre>! Fabien Olicard
+* La lecture rapide (ou pas) - Tony Buzan (no epub)
+! Delphine Batho
 * The Overstory / L'Arbre-Monde - Richard Powers
 ! Frank Lepage
 * Keith Dixon - les évangélistes du marché 
@@ -9724,7 +9730,9 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * François Roddier - thermodynamique de l'évolution
 * René Girard - Les origines de la culture
 ! misc:
-* Krishnamurti - Le Cœur des enseignements (1980)
+* ''Mandeville les recherches sur les origines de la vertu morale''
+* S. 'Ship of Theseus' Doug Dorst &amp; J.J. Abrams (~Maison des Feuilles) (no-epub)
+* ''Krishnamurti - Le Cœur des enseignements (1980)''
 * ''James Gleick - The Information: A History, a Theory, a Flood''
 * Jiddu Krishnamurti - De l'éducation
 * ''L'Entraide - Pierre Kropotkine''
@@ -10079,6 +10087,32 @@ Three Pieces of Silver by Rune Klan (DVD) - unique and difficult coin effects th
 &lt;&lt;&lt;
 </pre>
 </div>
+<div created="20200131131548658" modified="20200131132048233" tags="communication fiche_lecture" title="Comment parler pour être entendus">
+<pre>Julian Treasure: Comment parler pour que les gens veuillent écouter https://www.youtube.com/watch?v=eIho2S0ZahI
+
+! errors to avoid
+* gossiping
+* judging
+* negativity
+* complaining
+* excuses
+* exageration
+* dogmatism (confusion fact/opinion)
+
+! HAIL = things to do in communication
+* ''Honesty ''(being true, straight &amp; clear)
+* ''Authenticity ''(being yourself)
+* ''Integrity ''(be your word, do what you say)
+* ''Love ''(wish people well)
+
+! other elements in oral communication
+* register (region of body where your voice comes from : nose / throat / belly)
+* timber
+* prosody ()
+* pace (vitesse)
+* silence
+* pitch</pre>
+</div>
 <div created="20190712134339427" modified="20190712134705697" tags="fiche_lecture" title="comment survivre à un mouvement de foule">
 <pre># sortir - aller vers l'endroit où la densité diminue 
 # partir à temps (évaluer la densité : pas de contact / contact intempestifs inévitables / difficile de se toucher le visage tellement on est serrés)
@@ -10117,7 +10151,7 @@ Sortir de son corps, un phénomène objectivable (OBE)
 
 </pre>
 </div>
-<div created="20200115140143574" modified="20200115140212919" tags="" title="Consensus">
+<div created="20200115140143574" modified="20200131131546575" tags="communication" title="Consensus">
 <pre>http://education3.canalblog.com/archives/2019/11/04/37762793.html
 
 &lt;&lt;&lt;
@@ -10904,7 +10938,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20200130150801222" tags="home current" title="Home">
+<div created="20190108105358377" modified="20200131143314094" tags="home current" title="Home">
 <pre>! Daily
 * https://www.epicgames.com/store/en-US/free-games epicgames.osef.osef@xoxy.net 7/19
 * https://mail.yahoo.com
@@ -10915,8 +10949,9 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 ! TODO
 * ''AUSY: ATTESTATION TITRE DE TRANSPORT''
 * ''extract leno.1fr1.net''
-* [[Torrent]]
 * ''Talend | Norsys''
+* [[Torrent]]
+* [[Books / livres]]
 * Adrastia https://www.youtube.com/channel/UCprmhr8rfvlFpuSmv-QOEgA/videos
 * Le Lobby https://orientxxi.info/fr/video
 * Remember Me (Alain Damasio) https://www.youtube.com/watch?v=zq0oYmBJ3hs
@@ -10930,10 +10965,6 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * https://www.gold.fr/cours-or-prix-de-l-or/napoleon-or-20-francs-louis-or/
 * https://www.gold.fr/comptoirs-achat-vente-or/nantes/
 * https://www.patreon.com/PigCakee
-* http://god.freevar.com/games/underrail.html
-# https://uptobox.com/p81f5mqn08h8
-# https://uptobox.com/cr7t5fphrnva
-# https://uptobox.com/lt75stmwioia
 
 ! Ausy
 * https://monespace.ausy.fr/
@@ -10963,12 +10994,9 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * http://jeanzin.fr/ecorevo/sciences/temps.htm
 * http://jeanzin.fr/ecorevo/sciences/entropie.htm
 * http://jeanzin.fr/ecorevo/sciences/miracle.htm
-* https://www.youtube.com/watch?v=sNgqnyZPZ-U	REPORTAGE : 2 JOURS DANS LA VIE D' ARNAUD DUMOUCH THEOLOGIEN CATHOLIQUE [MORGAN PRIEST] 2018
 * https://www.ausyce.fr/index.php
 * http://www.slitaz.org/fr/
-* https://waitbutwhy.com/2014/05/life-weeks.html
 * https://waitbutwhy.com/2016/10/100-blocks-day.html
-* https://prototypekblog.wordpress.com/2019/04/24/un-jour-tout-cela-semblera-ridicule/
 * podcasts Julia Galef http://rationallyspeakingpodcast.org/
 
 
@@ -12146,6 +12174,15 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 * World's Greatest Magic 1-4
 * James Randi Secret of The Psychics</pre>
 </div>
+<div created="20200131132103939" modified="20200131132141970" tags="entropie conscience" title="pupilles / trous noirs">
+<pre>[Boris Laurent / Boris Crevin]
+[Les pupilles sont] Littéralement des trous noirs, comme ceux dans l'espace.
+On peut aussi regarder le cerveau pour trouver des tas de similitudes avec l'univers
+&quot;Ce qui est en haut est comme ce qui est en bas&quot;
+La question est : si à l'intérieur de nos yeux se trouve notre système nerveux et notre cerveau, qu'y a t il à l'interieur d'un trou noir ?
+Et si nos yeux servent à capter les particules de lumière, les photons, pour que notre cerveau puisse se fabriquer l'illusion du monde physique, à quoi sert la captation de la lumière par les trous noirs ?
+</pre>
+</div>
 <div created="20190130144059269" modified="20200113143029954" tags="pw" title="pw">
 <pre>```
 FREEBOX =&gt; 1/20
@@ -12223,8 +12260,12 @@ linkedin =&gt; 1/20
 
 * https://perso.limsi.fr/pointal/python:accueil</pre>
 </div>
-<div created="20190529145620246" modified="20200130152744043" tags="quotes" title="Quotes, citations">
+<div created="20190529145620246" modified="20200131153446873" tags="quotes" title="Quotes, citations">
 <pre>
+&lt;&lt;&lt;
+On ne peut attraper un grain avec un seul doigt
+&lt;&lt;&lt;
+
 
 &lt;&lt;&lt;
 La raison même du politique c'est de s'organiser collectivement pour changer le cours de l'histoire - Delphine Batho
@@ -12461,6 +12502,11 @@ Par ailleurs, cette artificialisation de la vie, en particulier de la nature, co
 ! Ovadia Yosef
 &lt;&lt;&lt;
 Les goyims [non juifs] n'ont de place dans le monde que pour servir le peuple d'Israël. [...] Avec les gentils, ce sera comme toute personne, ils doivent mourir, mais [Dieu] leur donnera longévité. Pourquoi ? Imaginez que l'âne de quelqu'un meurt, ils perdraient leur argent. C'est son servant. C'est pourquoi il a une longue vie, pour bien travailler pour ce juif - Ovadia Yosef
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+'Les vices privés font la vertu publique' Mandeville
 &lt;&lt;&lt;
 </pre>
 </div>
