--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -295,6 +295,8 @@ Error message and password prompt
 
 <li>Home</li>
 
+<li>how to learn anything in 20h</li>
+
 <li>Hypnomachie</li>
 
 <li>Hypnomachie &amp; pedo</li>
@@ -9364,7 +9366,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200131130630500" list="[[Quotes, citations]] Home" modified="20200131153437344" title="$:/StoryList">
+<div created="20200203100200576" list="Home" modified="20200203100200576" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -10938,13 +10940,19 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20200131143314094" tags="home current" title="Home">
+<div created="20190108105358377" modified="20200203151231561" tags="home current" title="Home">
 <pre>! Daily
 * https://www.epicgames.com/store/en-US/free-games epicgames.osef.osef@xoxy.net 7/19
 * https://mail.yahoo.com
 * https://facebook.com/messages
 * https://www.youtube.com/feed/subscriptions
 * [[pw]]
+
+! Ressources
+* https://annuel.framapad.org/p/leno
+* https://filebin.net/slemoine
+* https://github.com/lenopgm
+* http://leno.1fr1.net/
 
 ! TODO
 * ''AUSY: ATTESTATION TITRE DE TRANSPORT''
@@ -10970,11 +10978,6 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * https://monespace.ausy.fr/
 * https://intra.ausy.fr
 * https://webmail.ausy.fr/
-
-! Ressources
-* https://annuel.framapad.org/p/leno
-* https://github.com/lenopgm
-* http://leno.1fr1.net/
 
 ! Food
 * https://myedenred.fr/
@@ -11071,6 +11074,18 @@ Tyler1987
 ```
 
 cute https://twitter.com/i_iove_nature</pre>
+</div>
+<div created="20200203144845072" modified="20200203145029469" tags="fiche_lecture" title="how to learn anything in 20h">
+<pre>! The first 20 hours -- how to learn anything Josh Kaufman
+
+https://www.youtube.com/watch?v=5MgBikgcWnY
+
+# ''deconstruct the skill'' (analyse precisely what skills you want to acquire)
+# ''learn enough to self-correct'' (rassembler les éléments pédagogiques nécessaires)
+# ''remove practice barriers'' (distractions, TV, internet)
+# ''practice at least 20 hours'' (dépasser le découragement initial)
+
+The major barrier isn't intellectual. It's emotional.</pre>
 </div>
 <div created="20190927134431065" modified="20200123155915715" tags="fiche_lecture" title="Hypnomachie">
 <pre>pré-rationnel -&gt; rationnel -&gt; trans-rationnel
@@ -12260,8 +12275,23 @@ linkedin =&gt; 1/20
 
 * https://perso.limsi.fr/pointal/python:accueil</pre>
 </div>
-<div created="20190529145620246" modified="20200131153446873" tags="quotes" title="Quotes, citations">
+<div created="20190529145620246" modified="20200203104403534" tags="quotes" title="Quotes, citations">
 <pre>
+&lt;&lt;&lt;
+« Content de peu n’a rien à craindre » - Lao Tseu
+&lt;&lt;&lt;
+
+&lt;&lt;&lt;
+« Il y a trois sortes de violence. La première, mère de toutes les autres, est la violence institutionnelle, celle qui légalise et perpétue les dominations, les oppressions et les exploitations, celle qui écrase et lamine des millions d’Hommes dans ses rouages silencieux et bien huilés.
+
+La seconde est la violence révolutionnaire, qui naît de la volonté d’abolir la première.
+
+La troisième est la violence répressive, qui a pour objet d’étouffer la seconde en se faisant l’auxiliaire et la complice de la première violence, celle qui engendre toutes les autres.
+
+Il n’y a pas de pire hypocrisie de n’appeler violence que la seconde, en feignant d’oublier la première, qui la fait naître, et la troisième qui la tue. »
+&lt;&lt;&lt;
+
+
 &lt;&lt;&lt;
 On ne peut attraper un grain avec un seul doigt
 &lt;&lt;&lt;
