--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9378,7 +9378,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200206145114371" list="Home" modified="20200206152052487" title="$:/StoryList">
+<div created="20200207091703241" list="Home PluralSight" modified="20200207091703241" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9438,8 +9438,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200206150337223" title="$:/temp/search">
-<pre>tmp</pre>
+<div created="20190114084246125" modified="20200207134317165" title="$:/temp/search">
+<pre>tmpcurrent</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -11005,7 +11005,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20200206145112485" tags="home current" title="Home">
+<div created="20190108105358377" modified="20200207134737810" tags="home current" title="Home">
 <pre>! Daily
 * https://www.epicgames.com/store/en-US/free-games epicgames.osef.osef@xoxy.net 7/19
 * https://mail.yahoo.com
@@ -11022,6 +11022,10 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * https://filebin.net/slemoine
 * https://github.com/lenopgm
 * http://leno.1fr1.net/
+
+! encours
+* https://m.ing.fr/secure/login/cif 1332108
+* https://www.epargne-retraite-entreprises.bnpparibas.com
 
 ! TODO
 * ''Cynthia Fleury''
