--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -251,6 +251,8 @@ Error message and password prompt
 
 <li>current bookmarks</li>
 
+<li>current TODO</li>
+
 <li>Delavier &amp; spiritualité</li>
 
 <li>dés</li>
@@ -10376,6 +10378,40 @@ Si vous travaillez suffisamment vous serez en mesure d’accomplir des choses ju
 
 </pre>
 </div>
+<div created="20200207134926654" modified="20200207135814625" tags="todo" title="current TODO">
+<pre>! Daily
+* [[dev responsable]]
+* ''&gt;&gt;&gt;'' [[job hunt]]
+* [[PluralSight]]
+
+! encours
+* https://m.ing.fr/secure/login/cif 1332108
+* https://www.epargne-retraite-entreprises.bnpparibas.com
+
+! TODO
+* ''structure arborescente répertoires de rangement''
+* ''structure zippable/dézippable avec pwd pour stocker docs perso sur git''
+* ''extract leno.1fr1.net''
+* ''Cynthia Fleury''
+* Olivier Philippot / GreenIT / ''Green code lab'' https://www.linkedin.com/company/greenspector/ / https://www.linkedin.com/in/olivier-philippot-06a7907/
+* ''AUSY: ATTESTATION TITRE DE TRANSPORT''
+* ''Talend | Norsys''
+* [[Torrent]]
+* [[Books / livres]]
+* Adrastia https://www.youtube.com/channel/UCprmhr8rfvlFpuSmv-QOEgA/videos
+* Le Lobby https://orientxxi.info/fr/video
+* Remember Me (Alain Damasio) https://www.youtube.com/watch?v=zq0oYmBJ3hs
+* ''Turing indéterminabilité de l'arrêt / Incomplétude de Goedel / caractère fini de la connaissance''
+* Litobox musculation à poids de corps
+* listen : Silencer Death Pierce Me
+
+! Buy
+* https://www.jmcorda.com/fr/rituel-du-matin 
+* https://www.jmcorda.com/fr/dominationbylove ''https://www.jmcorda.com/fr/dominationbylove?infos=dbl.x.osef%40xoxy.net%2C5e32d7afd5748%2CZjdkMDM0OTliYzU2MDEwOWNlZjVlM2M1NzNkMDZhMjBjMWViOWRlYQ%3D%3D''
+* https://www.gold.fr/cours-or-prix-de-l-or/napoleon-or-20-francs-louis-or/
+* https://www.gold.fr/comptoirs-achat-vente-or/nantes/
+* https://www.patreon.com/PigCakee</pre>
+</div>
 <div created="20190529145458196" modified="20190830154142741" tags="spiritualité delavier" title="Delavier &amp; spiritualité">
 <pre>Delavier:
 
@@ -11005,19 +11041,26 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20200207134737810" tags="home current" title="Home">
+<div created="20190108105358377" modified="20200207135933721" tags="home current" title="Home">
 <pre>! Daily
-* https://www.epicgames.com/store/en-US/free-games epicgames.osef.osef@xoxy.net 7/19
-* https://mail.yahoo.com
-* https://webmail.ausy.fr
-* https://facebook.com/messages
-* https://www.youtube.com/feed/subscriptions
-* [[pw]]
-* [[dev responsable]]
+* https://mail.yahoo.com l.d@y
+* https://webmail.ausy.fr sa.le@a.f 1+20
+* [[current TODO]]
 * ''&gt;&gt;&gt;'' [[job hunt]]
 * [[PluralSight]]
+* [[dev responsable]]
+
+! Weekly
+* https://www.epicgames.com/store/en-US/free-games epicgames.osef.osef@xoxy.net 7/19
+* https://facebook.com/messages l.d@y7+17
+
+! Skank
+* https://sebsauvage.net/links/
+* https://www.youtube.com/feed/subscriptions osfgrrla 5+19
+* https://danstonchat.com/latest.html
 
 ! Ressources
+* [[pw]]
 * https://annuel.framapad.org/p/leno
 * https://filebin.net/slemoine
 * https://github.com/lenopgm
